--- a/index.html
+++ b/index.html
@@ -10,29 +10,51 @@
 		<div id="app"></div>
 	</body>
 	<script>
-		const app = document.querySelector('#app');
-		let state = {
-			items: ['item1', 'item2', 'item3', 'item4', 'item5'],
-		};
+		class Component {
+			$target;
+			$state;
 
-		const render = () => {
-			const { items } = state;
-			app.innerHTML = `
+			constructor($target) {
+				this.$target = $target;
+				this.setup();
+				this.render();
+			}
+			setup() {}
+			template() {
+				return ``;
+			}
+			render() {
+				this.$target.innerHTML = this.template();
+				this.setEvent();
+			}
+			setEvent() {}
+			setState(newState) {
+				this.$state = { ...this.$state, ...newState };
+				this.render();
+			}
+		}
+
+		class App extends Component {
+			setup() {
+				this.$state = { items: ['item1', 'item2'] };
+			}
+			template() {
+				const { items } = this.$state;
+				return `
 		        <ul>
 		          ${items.map((item) => `<li>${item}</li>`).join('')}
 		          </ul>
 		          <button id="append">추가</button>
 		      `;
-			document.querySelector('#append').addEventListener('click', () => {
-				setState({ items: [...items, `item${items.length + 1}`] });
-			});
-		};
+			}
+			setEvent() {
+				const { items } = this.$state;
+				document.querySelector('#append').addEventListener('click', () => {
+					this.setState({ items: [...items, `item${items.length + 1}`] });
+				});
+			}
+		}
 
-		const setState = (newState) => {
-			state = { ...state, ...newState };
-			render();
-		};
-
-		render();
+		new App(document.querySelector('#app'));
 	</script>
 </html>
